@@ -88,54 +88,104 @@
 					<!-- GENRE -->
 					<control type="group">
 						<posx>680</posx>
-						<posy>205</posy>
-						<visible>!IsEmpty(ListItem.Genre)</visible>
-						<animation effect="slide" start="0" end="0,85" condition="IsEmpty(ListItem.Writer)">Conditional</animation>
-						<control type="label">
-							<posx>0</posx>
-							<posy>0</posy>
-							<width>350</width>
-							<height>36</height>
-							<font>Font-Alaska-S34-BL</font>
-							<align>left</align>
-							<label>515</label>
-							<textcolor>Mod_Tags_Dark</textcolor>
+						<posy>202</posy>
+						<animation effect="slide" start="0" end="0,85" condition="[IsEmpty(ListItem.Writer) + !Container(9333).HasFocus(5)] | [IsEmpty(ListItem.FileNameAndPath) + Container(9333).HasFocus(5)]">Conditional</animation>							
+						<control type="group">
+							<visible>!IsEmpty(ListItem.Genre) + [!Container(9333).HasFocus(5) | IsEmpty(ListItem.Premiered)]</visible>
+							<control type="label">
+								<posx>0</posx>
+								<posy>0</posy>
+								<width>350</width>
+								<height>36</height>
+								<font>Font-Alaska-S34-BL</font>
+								<align>left</align>
+								<label>515</label>
+								<textcolor>Mod_Tags_Dark</textcolor>
+							</control>
+							<control type="label">
+								<posx>0</posx>
+								<posy>32</posy>
+								<width>840</width>
+								<height>36</height>
+								<font>Font-Condensed-S29</font>
+								<align>left</align>
+								<label>$INFO[ListItem.Genre]</label>
+								<textcolor>Mod_Tags</textcolor>
+							</control>
 						</control>
-						<control type="label">
-							<posx>0</posx>
-							<posy>32</posy>
-							<width>840</width>
-							<height>36</height>
-							<font>Font-Condensed-S29</font>
-							<align>left</align>
-							<label>$INFO[ListItem.Genre]</label>
-							<textcolor>Mod_Tags</textcolor>
+						<control type="group">
+							<visible>Container(9333).HasFocus(5) + !IsEmpty(ListItem.Premiered)</visible>
+							<control type="label">
+								<posx>0</posx>
+								<posy>0</posy>
+								<width>350</width>
+								<height>36</height>
+								<font>Font-Alaska-S34-BL</font>
+								<align>left</align>
+								<label>20416</label>
+								<textcolor>Mod_Tags_Dark</textcolor>
+							</control>
+							<control type="label">
+								<posx>0</posx>
+								<posy>32</posy>
+								<width>840</width>
+								<height>36</height>
+								<font>Font-Condensed-S29</font>
+								<align>left</align>
+								<label>$INFO[ListItem.Premiered]</label>
+								<textcolor>Mod_Tags</textcolor>
+							</control>
 						</control>
 					</control>	
 					<!-- WRITER -->
 					<control type="group">
 						<posx>680</posx>
-						<posy>290</posy>
-						<visible>!IsEmpty(ListItem.Writer)</visible>
-						<control type="label">
-							<posx>0</posx>
-							<posy>0</posy>
-							<width>350</width>
-							<height>36</height>
-							<font>Font-Alaska-S34-BL</font>
-							<align>left</align>
-							<label>20417</label>
-							<textcolor>Mod_Tags_Dark</textcolor>
+						<posy>287</posy>
+						<control type="group">
+							<visible>!IsEmpty(ListItem.Writer) + [!Container(9333).HasFocus(5) | IsEmpty(ListItem.FileNameAndPath)]</visible>
+							<control type="label">
+								<posx>0</posx>
+								<posy>0</posy>
+								<width>350</width>
+								<height>36</height>
+								<font>Font-Alaska-S34-BL</font>
+								<align>left</align>
+								<label>20417</label>
+								<textcolor>Mod_Tags_Dark</textcolor>
+							</control>
+							<control type="label">
+								<posx>0</posx>
+								<posy>32</posy>
+								<width>840</width>
+								<height>36</height>
+								<font>Font-Condensed-S29</font>
+								<align>left</align>
+								<label>$INFO[ListItem.Writer]</label>
+								<textcolor>Mod_Tags</textcolor>
+							</control>
 						</control>
-						<control type="label">
-							<posx>0</posx>
-							<posy>32</posy>
-							<width>840</width>
-							<height>36</height>
-							<font>Font-Condensed-S29</font>
-							<align>left</align>
-							<label>$INFO[ListItem.Writer]</label>
-							<textcolor>Mod_Tags</textcolor>
+						<control type="group">
+							<visible>Container(9333).HasFocus(5) + !IsEmpty(ListItem.FileNameAndPath)</visible>
+							<control type="label">
+								<posx>0</posx>
+								<posy>0</posy>
+								<width>350</width>
+								<height>36</height>
+								<font>Font-Alaska-S34-BL</font>
+								<align>left</align>
+								<label>573</label>
+								<textcolor>Mod_Tags_Dark</textcolor>
+							</control>
+							<control type="label">
+								<posx>0</posx>
+								<posy>32</posy>
+								<width>840</width>
+								<height>36</height>
+								<font>Font-Condensed-S29</font>
+								<align>left</align>
+								<label>$INFO[ListItem.FileNameAndPath]</label>
+								<textcolor>Mod_Tags</textcolor>
+							</control>
 						</control>
 					</control>	
 					<!-- DIRECTOR -->
@@ -143,7 +193,7 @@
 						<visible>!Control.HasFocus(9336) + !IsEmpty(ListItem.Director)</visible>
 						<animation effect="fade" start="100" end="0" time="200" delay="200">Hidden</animation>
 						<posx>680</posx>
-						<posy>375</posy>
+						<posy>372</posy>
 						<control type="image">
 							<posx>-10</posx>
 							<posy>35</posy>
@@ -187,7 +237,7 @@
 					<!-- RUN TIME -->
 					<control type="group">
 						<posx>680</posx>
-						<posy>460</posy>
+						<posy>457</posy>
 						<visible>!IsEmpty(ListItem.Duration)</visible>
 						<control type="label">
 							<posx>0</posx>
