@@ -75,6 +75,7 @@
             <control type="group">
             	<posy>490</posy>
             	<animation effect="fade" start="0" end="100" delay="400" time="350" reversible="false" condition="![Container(56).OnNext | Container(56).OnPrevious]">Conditional</animation>
+            	<visible>Control.IsVisible(56)</visible>
             	<control type="image">
 					<description>Left</description>
 					<posx>-8</posx>
